Fix comment z-index

--- a/app/assets/stylesheets/post.css
+++ b/app/assets/stylesheets/post.css
@@ -29,6 +29,7 @@
   top: -25px;
   left: 50%;
   width: 50%;
+  z-index: 2;
 }
 .comment .game {
   width: 90%;
